--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "paths": {
       "$routes/*": ["./src/routes/*"],
       "$shared/*": ["./src/shared/*"],
-      "$serv/*": ["./src/service/*"],
+      "$services/*": ["./src/services/*"],
       "$assets/*": ["./src/assets/*"],
       "@/*": ["../node_modules/*"],
       "~": ["./"]
